# squeeze

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in.in  module.xml  squeeze.desktop.in  squeeze.tap  xarchiver.desktop.in
data/: Makefile.am  gnu-tar.squeeze  unzip.squeeze  zip.squeeze
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/libsqueeze/: Makefile.am  libsqueeze-docs.sgml  libsqueeze-sections.txt
docs/reference/libsqueeze/tmpl/: archive-support-gnu-tar.sgml  archive-support-zip.sgml  archive-support.sgml  archive.sgml  internals.sgml  libsqueeze-unused.sgml  libsqueeze.sgml  slist.sgml
icons/: Makefile.am
icons/16x16/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
libsqueeze/: Makefile.am  archive-command.c  archive-command.h  archive-iter-pool.c  archive-iter-pool.h  archive-iter.c  archive-iter.h  archive-support-compr.c  archive-support-compr.h  archive-support-gnu-tar.c  archive-support-gnu-tar.h  archive-support-rar.c  archive-support-rar.h  archive-support-unrar.c  archive-support-unrar.h  archive-support-zip.c  archive-support-zip.h  archive-support.c  archive-support.h  archive-tempfs.c  archive-tempfs.h  archive.c  archive.h  btree.c  btree.h  builder-settings.c  builder-settings.h  command-builder-compr.c  command-builder-compr.h  command-builder-gnu-tar.c  command-builder-gnu-tar.h  command-builder-rar.c  command-builder-rar.h  command-builder-zip.c  command-builder-zip.h  command-builder.c  command-builder.h  command-option.c  command-option.h  command-queue.c  (+49 more)
libxarchiver/: Makefile.am  archive-support-gnu-tar.c  archive-support-gnu-tar.h  archive-support-rar.c  archive-support-rar.h  archive-support-unrar.c  archive-support-unrar.h  archive-support-zip.c  archive-support-zip.h  archive-support.c  archive-support.h  archive.c  archive.h  compression-support-bzip2.c  compression-support-bzip2.h  compression-support-gzip.c  compression-support-gzip.h  compression-support.c  compression-support.h  internals.c  internals.h  libxarchiver.c  libxarchiver.h  mime.c  mime.h  slist.c  slist.h  support-7zip.c  support-arj.c  support-rar.c
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  ku.po  lt.po  lv.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ru.po  si.po  (+14 more)
squeeze-cli/: Makefile.am  cli.c  cli.h  main.c
src/: Makefile.am  add_dialog.c  add_dialog.h  application.c  application.h  archive_store.c  archive_store.h  archive_tree_store.c  archive_tree_store.h  button_drag_box.c  button_drag_box.h  extract_dialog.c  extract_dialog.h  main.c  main.h  main_window.c  main_window.h  main_window_menu_bar.c  main_window_menu_bar.h  main_window_status_bar.c  main_window_status_bar.h  main_window_tool_bar.c  main_window_tool_bar.h  message_dialog.c  message_dialog.h  navigation_bar.c  navigation_bar.h  new_dialog.c  new_dialog.h  notebook.c  notebook.h  path_bar.c  path_bar.h  preferences_dialog.c  preferences_dialog.h  properties_dialog.c  properties_dialog.h  settings.c  settings.h  throbber-fallback.h  (+6 more)
tests/: Makefile.am  gnu_tar_main.c  test-libxarchiver-composite-archives.c
tests/zip/: Makefile.am  test-add.c  test-extract.c  test-gnu-tar-add.pl  test-zip-add.c  test-zip-add.pl  test-zip-extract.pl  test-zip-remove.c  test-zip-remove.pl
tests/zip/.deps/: test-zip-add.Po  test-zip-extract.Po  test-zip-refresh.Po  test-zip-remove.Po
tests/zip/.libs/: lt-test-zip-add  lt-test-zip-extract  lt-test-zip-refresh  lt-test-zip-remove  test-zip-add  test-zip-extract  test-zip-refresh  test-zip-remove
